src/objects/Flipkart_Applications_Definition__c.object
<CustomObject>
    <description>Flipkart Applications Definition</description>
    <fields>
        <fullName>Application_Name__c</fullName>
        <label>Application Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Encoding__c</fullName>
        <label>Encoding</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Encryption__c</fullName>
        <label>Encryption</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Password__c</fullName>
        <label>Password</label>
        <length>150</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <required>true</required>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>XML-RPC / Web Services / RESTful</description>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>XML-RPC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Web Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RESTful</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>User_Name__c</fullName>
        <label>User Name</label>
        <length>200</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Flipkart Applications Definition</label>
    <listViews>
        <fullName>All</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>User_Name__c</columns>
        <columns>Password__c</columns>
        <columns>Encryption__c</columns>
        <columns>Encoding__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Flipkart Application ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Flipkart Applications Definitions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>